--- a/semka/public/css/style.css
+++ b/semka/public/css/style.css
@@ -1,3 +1,26 @@
+.comment {
+    width: 100%;
+    margin: 10px;
+}
+
+.book-info {
+    display: flex;
+}
+
+.book-info-img{
+    width: 200px;
+    height: 300px;
+    border-radius: 5px;
+}
+
+.book-info-content {
+    margin-left: 10px;
+}
+
+.book-info-content p {
+    padding: 10px;
+}
+
 .alert{
     margin: 10px;
 }
