--- a/semka/public/css/style.css
+++ b/semka/public/css/style.css
@@ -1,6 +1,32 @@
+.shadow {
+    position: absolute;
+    background-color: rgba(0, 0, 0, .5);
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    z-index: 3;
+    display: none;
+}
+
+.pop-up {
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    width: 300px;
+    height: 500px;
+    border: white solid 2px;
+    border-radius:  5px;
+    z-index: 4;
+}
+
 .comment {
     width: 100%;
     margin: 10px;
+}
+
+section {
+    margin-bottom: 15px;
 }
 
 .welcome-img-right {
@@ -110,7 +136,7 @@ a.nav-right-link:hover {
     height: auto;
     display: inline-block;
     margin-top: 10px;
-    width: 200px;
+    width: 20%;
     text-align: center;
     margin-right: 20px;
 }
@@ -125,6 +151,10 @@ a.nav-right-link:hover {
 .bookView .img img{
     height: 300px;
     width: 200px;
+}
+
+.bookView .img {
+    width: 300px;
 }
 
 .book-info-content p {
