--- a/semka/public/css/style.css
+++ b/semka/public/css/style.css
@@ -1,5 +1,5 @@
 .shadow {
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, .5);
     width: 100%;
     height: 100%;
@@ -10,7 +10,7 @@
 }
 
 .pop-up {
-    position: absolute;
+    position: fixed;
     top: 20%;
     left: 40%;
     width: 300px;
@@ -168,8 +168,8 @@ a.nav-right-link:hover {
 
 .welcome-page p {
     margin: 0 10%;
+    text-align: justify;
 }
-
 
 @media ( max-width: 1000px ) {
     a.nav-right-link {
@@ -188,5 +188,11 @@ a.nav-right-link:hover {
 @media ( max-width: 600px ) {
     a.nav-right-link {
         left: 88%;
+    }
+}
+
+@media ( max-width: 500px ) {
+    .welcome-img-left img, .welcome-img-right img {
+        width: 400px;
     }
 }
